# Nexcore-Webhook-Example

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  downloader.py  main.py  models.py  nexcore_client.py  security.py  store.py
deploy/cloudflared/: config.example.yml
deploy/systemd/: nexcore-webhook.service
deploy/windows/: README.md
docs/: deployment-docker.md  deployment-linux.md  deployment-windows.md  generating-an-api-key.md  ingress-caddy.md  ingress-cloudflare-tunnel.md  nexcore-prerequisites.md  office-power-automate.md  registering-a-subscription.md  signature-verification.md  webhook-payload-reference.md
scripts/: send_sample_webhook.py
tests/: test_downloader.py  test_nexcore_client.py  test_security.py  test_send_sample_webhook.py  test_smoke.py  test_store.py  test_subscription_cli.py  test_webhook.py
